<resources>
    <string name="app_name">Connect Four</string>

    <string name="restart_button">Restart</string>
    <string name="status_win">%1$s is the winner!</string>
    <string name="status_draw">It\'s a draw!</string>
    <string name="status_turn">It\'s %1$s\'s turn</string>

    <string name="dialog_restart_title">Restart</string>
    <string name="dialog_restart_message">Restart the game?</string>
    <string name="dialog_restart_positive">OK</string>
    <string name="dialog_restart_negative">Cancel</string>

    <string name="toast_game_hint">Tap board to place disk</string>

    <string name="button_play_game">Play game</string>
    <string name="button_high_score">High score</string>
    <string name="credit">By Dan Setterquist</string>

    <string name="header_player_1">Player 1</string>
    <string name="header_player_2">Player 2</string>
    <string name="button_start_game">Start</string>

    <string name="info_empty_high_score">No games</string>

    <string name="high_score_title_name">Name</string>
    <string name="high_score_title_wins">Wins</string>
</resources>
