<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/header_player_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/header_player_1"/>

            <EditText
                android:id="@+id/name_player_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/header_player_1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/color_player_1"
                android:maxLength="20"
                android:text="@string/header_player_1"/>

            <Button
                android:id="@id/color_player_1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/name_player_1"
                android:layout_marginRight="8dp"
                android:onClick="onColorP1Clicked"/>

            <TextView
                android:id="@+id/header_player_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/name_player_1"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/header_player_2"/>

            <EditText
                android:id="@+id/name_player_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/header_player_2"
                android:layout_marginLeft="8dp"
                android:layout_toLeftOf="@+id/color_player_2"
                android:maxLength="20"
                android:text="@string/header_player_2"/>

            <Button
                android:id="@id/color_player_2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/name_player_2"
                android:layout_marginRight="8dp"
                android:onClick="onColorP2Clicked"/>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:onClick="onStartButtonClicked"
        android:text="@string/button_start_game"/>
</LinearLayout>